# latex-on-http

./: .dockerignore  .editorconfig  .gitignore  .travis.yml  CHANGELOG.md  DEV.md  Dockerfile  Dockerfile-vanilla  LICENSE  Makefile  Pipfile  README.md  TODO.md  app.py  app_cache.py  cache.Dockerfile  docker-compose.dev.yml  docker-compose.test.yml  docker-compose.yml  pyproject.toml  pytest.ini  requirements-tests.txt  requirements.txt  run.sh
.github/workflows/: build-and-test.yml  docker-hub-publish.yml
container/: docker_push.sh  install_fonts.sh  install_latex_packages.sh  install_python.sh  install_tests.sh  install_texlive.sh  python-alpine.Dockerfile  python-debian.Dockerfile  texlive.profile  tl-distrib-alpine.Dockerfile  tl-distrib-debian.Dockerfile
examples/basic_curl_cli/: compile.sh  sample.tex
examples/basic_python_cli/: latexonhttp_cli.py
examples/bibtex/: README.md  biblatex_sample.tex  bibtex_sample.tex  compile.sh  learnlatex.bib  natlib_sample.tex
examples/browser_fetch/: README.md  save-as-file.html
examples/gitlab_ci/: Dossier_Eleve.tex  README.md  compile.sh  payload.json
examples/httpie_multipart/: README.md  compile.sh
examples/templates/: moderncv.tex
latex-on-http/: app.py  compiler.py
latexonhttp/: app.py  compiler.py  latexrun.py
latexonhttp/api/: builds.py  caches.py  fonts.py  packages.py  projects.py  texlive.py
latexonhttp/caching/: bridge.py  filesystem.py  process.py  resources.hy  store.py
latexonhttp/resources/: fetching.py  json_api.py  multipart_api.py  normalization.hy  querystring_api.py  utils.py  validation.hy
latexonhttp/tlmgr_packages/: __init__.py
latexonhttp/utils/: fun.hy  misc.py  processes.py  texlive.py
latexonhttp/workspaces/: filesystem.py  lifecycle.py
samples/: TODO.md
samples/eps-include/: hbghlyj-sample.tex
samples/invoices/mrzool-boilerplate/: Makefile  README.md  details.yml  output-pandoc.tex  sample.tex  template-raw.tex  template.tex
samples/quotes/mrzool-inspired/: Makefile  README.md  details.yml  output-pandoc.tex  template-pandoc.tex  template-raw.tex
tests/: conftest.py  test_api_caches.py  test_api_input_spec.py  test_api_json.py  test_api_multipart.py  test_api_querystring.py  test_compiling.py  test_cors.py  test_fetchers.py  test_fonts.py  test_packages.py  test_up_and_running.py
tests/samples/pstricks/: barsamian-test3.json  barsamian-test3.tex
tests/utils/: pdf.py
tools/: entrypoint.sh
tools/migrations/: 00001_job_status.sql
