[project]
name = "latex-on-http"
version = "0.1.0"
description = "LaTeX-on-HTTP"
authors = [
    {name = "Yoan Tournade",email = "y@yoantournade.com"}
]
readme = "README.md"
requires-python = ">=3.12,<3.14"
dependencies = [
    "requests (>=2.32.3)",
    "flask (>=3.1.0)",
    "fclist-cffi (>=1.1.2)",
    "gunicorn (>=23.0.0)",
    "texlivemetadata (>=0.1.3)",
    "hy (>=1.0.0)",
    "urllib3 (>=2.3.0)",
    "pyzmq (>=26.2.1)",
    "msgpack (>=1.1.0)",
    "colorama (>=0.4.6)",
    "glom (>=24.11.0)",
    "flask-cors (>=5.0.1)",
    "importlib-metadata (>=8.6.1)",
    "hyrule (>=0.8.0)",
    "sentry-sdk[flask] (>=2.22.0)",
    "cerberus (>=1.3.7)",
    "envparse (>=0.2.0)",
    "psutil (>=7.1.0)"
]

[tool.poetry]
package-mode = false

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"
requests-futures = "^1.0.2"
black = "^25.1.0"
pdf2image = "^1.17.0"
hexdump = "^3.3"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
